--- a/InterfazWidgetL2/app/src/main/AndroidManifest.xml
+++ b/InterfazWidgetL2/app/src/main/AndroidManifest.xml
@@ -15,6 +15,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver android:name="layout.ImageWidgetClass" android:label="My Widget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_interfaz_info"/>
+
+        </receiver>
     </application>
 
 </manifest>
