--- a/WidgetHerramientaL5/app/src/main/AndroidManifest.xml
+++ b/WidgetHerramientaL5/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.exercise.nextu.interfazwidgetl2">
+    package="com.exercise.nextu.widgetherramiental5">
 
     <application
         android:allowBackup="true"
@@ -15,18 +15,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <receiver android:name="layout.ImageWidgetClass" android:label="My Widget">
-            <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
-            </intent-filter>
-
-            <meta-data
-                android:name="android.appwidget.provider"
-                android:resource="@xml/widget_interfaz_info"/>
-
-        </receiver>
-
     </application>
 
 </manifest>
