--- a/NotificationBuildeL4/app/src/main/AndroidManifest.xml
+++ b/NotificationBuildeL4/app/src/main/AndroidManifest.xml
@@ -10,14 +10,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:label="Whatever">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Main2Activity"></activity>
+        <activity android:name=".Main2Activity" android:label="Whatever2"></activity>
     </application>
 
 </manifest>
