--- a/EvFinal2/app/src/main/AndroidManifest.xml
+++ b/EvFinal2/app/src/main/AndroidManifest.xml
@@ -15,7 +15,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GalleryActivity" android:label="@string/string_activity_gallery_title"></activity>
+        <activity
+            android:name=".GalleryActivity"
+            android:label="@string/string_activity_gallery_title" />
+
+        <receiver android:name=".MainWidget" android:label="MainWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/main_widget_info" />
+        </receiver>
     </application>
 
 </manifest>
