--- a/ToolbarM6W2L2/app/build.gradle
+++ b/ToolbarM6W2L2/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.exercises.sart1991.webvieww1m1"
+        applicationId "com.exercises.sart1991.toolbarm6w2l2"
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
@@ -26,5 +26,5 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.1'
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:customtabs:25.1.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
