--- a/ExerciseToolbar/app/build.gradle
+++ b/ExerciseToolbar/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.exercises.sart1991.toolbarm6w2l2"
+        applicationId "com.exercises.sart1991.exercisetoolbar"
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
@@ -25,6 +25,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
 }
