--- a/BackgroundTasks/app/src/main/AndroidManifest.xml
+++ b/BackgroundTasks/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.exercises.sart1991.backgroundtasks">
     
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,11 +15,15 @@
         <activity android:name=".ui.activity.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-    
+                
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.unit2.Unit2Activity"></activity>
+        <activity
+            android:name=".ui.activity.httpurl.HttpActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+        
+        </activity>
     </application>
 
 </manifest>
