--- a/AnimationsGraphicsMultimedia/app/src/main/AndroidManifest.xml
+++ b/AnimationsGraphicsMultimedia/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.exercises.sart1991.animationsgraphicsmultimedia">
     
+    <uses-feature android:glEsVersion="0x00020000" android:required="true"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,7 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.animation.AnimationActivity"></activity>
+        <activity android:name=".ui.activity.animation.AnimationActivity" />
+        <activity android:name=".ui.activity.opengl.OpenGLActivity"></activity>
     </application>
 
 </manifest>
