splash screen finished

--- a/EvaluacionFinal11/app/src/main/AndroidManifest.xml
+++ b/EvaluacionFinal11/app/src/main/AndroidManifest.xml
@@ -15,15 +15,19 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
         
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".SplashScreenActivity"
+            android:theme="@style/SplashScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-    
+                
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity android:name=".MainActivity" />
         <activity android:name=".ContentActivity" />
-        <activity android:name=".ContactsActivity"></activity>
+        <activity android:name=".ContactsActivity" />
     </application>
 
 </manifest>
