--- a/EvaluacionFinal11/app/build.gradle
+++ b/EvaluacionFinal11/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.android.gms:play-services-auth:11.0.4'
+    compile 'android.arch.lifecycle:extensions:1.0.0-beta1'
+
     testCompile 'junit:junit:4.12'
 }
 
