--- a/EvaluacionFinal11/app/build.gradle
+++ b/EvaluacionFinal11/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.google.android.gms:play-services-location:11.0.4'
     compile 'com.google.android.gms:play-services-auth:11.0.4'
     compile 'android.arch.lifecycle:extensions:1.0.0-beta1'
 
