--- a/EvaluacionFinal11/app/src/main/AndroidManifest.xml
+++ b/EvaluacionFinal11/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
         
         <activity
             android:name=".ui.activities.SplashScreenActivity"
@@ -30,7 +33,7 @@
         <activity android:name=".ui.activities.MainActivity" />
         <activity android:name=".ui.activities.ContentActivity" />
         <activity android:name=".ui.activities.ContactsActivity" />
-        <service android:name=".repository.geofence.GeofenceTransitionIntentService"/>
+        <service android:name=".repository.geofence.GeofenceTransitionsIntentService"/>
     </application>
 
 </manifest>
