--- a/EvaluacionFinal12/app/build.gradle
+++ b/EvaluacionFinal12/app/build.gradle
@@ -10,12 +10,24 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    signingConfigs {
+        release {
+            storeFile file(RELEASE_STORE_FILE)
+            storePassword RELEASE_STORE_PASSWORD
+            keyAlias RELEASE_KEY_ALIAS
+            keyPassword RELEASE_KEY_PASSWORD
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
+
 }
 
 dependencies {
@@ -23,9 +35,10 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation "android.arch.lifecycle:extensions:1.0.0-rc1"
-    implementation "android.arch.persistence.room:runtime:1.0.0-rc1"
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     implementation 'com.android.support:design:26.1.0'
+    implementation 'com.google.firebase:firebase-ads:11.6.0'
+    implementation "android.arch.persistence.room:runtime:1.0.0-rc1"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0-rc1"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
