--- a/EvaluacionFinal12/gradle.properties
+++ b/EvaluacionFinal12/gradle.properties
@@ -15,3 +15,8 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+RELEASE_STORE_FILE=../evf12.keystore
+RELEASE_STORE_PASSWORD=sart1991
+RELEASE_KEY_ALIAS=evfinal12
+RELEASE_KEY_PASSWORD=sart1991
